Fix button alignment issues
The Welcome Guide/Tour, initiated from the Site Editor
(Appearances --> Editor), has 10 steps. When initiated from other
places, like when creating new Pages, it has only 9 steps. The
extra step causes the Dutch translation of 'Take the tour' to wrap,
resulting in poor presentation.

This fix widens the parent container to prevent wrapping.

Related to Automattic/i18n-issues#792

--- a/packages/tour-kit/src/variants/wpcom/styles.scss
+++ b/packages/tour-kit/src/variants/wpcom/styles.scss
@@ -60,7 +60,7 @@ $wpcom-tour-kit-step-card-overlay-controls-button-bg-color: #32373c; // former $
 }
 
 .wpcom-tour-kit-step-card {
-	width: 400px;
+	width: 412px;
 	max-width: 92vw;
 
 	&.wpcom-tour-kit-step-card.is-elevated {
